--- a/package.json
+++ b/package.json
@@ -33,15 +33,17 @@
   },
   "homepage": "https://github.com/SeptBlast/information-protection#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
-    "requests": "^0.3.0",
+    "request": "^2.88.2",
     "swagger-jsdoc": "^4.3.0",
     "swagger-ui-express": "^4.1.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.5",
+    "prettier": "^2.1.2"
   }
 }
